--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-revision
+Skip to content
+Search
+Pull requests
+Issues
+Codespaces
+Marketplace
+Explore
+ 
+@wangf988 
+bharat30156
+/
+Takk
+Private
+Fork your own copy of bharat30156/Takk
+Code
+Issues
+Pull requests
+Actions
+Projects
+Security
+Insights
+Takk/FrontEnd/takk-Home-Page/public/index.html
+@bharat30156
+bharat30156 Implemented Takk Home-Page without responsiveness
+Latest commit 1395972 yesterday
+ History
+ 1 contributor
+16 lines (16 sloc)  549 Bytes
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000" />
+    <meta name="description" content="Web site created using Locofy" />
+    <title>takk-Home-Page</title>
+    <style></style>
+  </head>
+  <body style="margin: 0; line-height: normal">
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
+Footer
+© 2023 GitHub, Inc.
+Footer navigation
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
