--- a/index.html
+++ b/index.html
@@ -3,12 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000" />
-    <meta name="description" content="Web site created using Locofy" />
-    <title>takk-Home-Page</title>
-    <style></style>
+    <title>my Page</title>
   </head>
   <body style="margin: 0; line-height: normal">
     <noscript>You need to enable JavaScript to run this app.</noscript>
