--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GitHub page as PWA template</title>
-  <link rel="canonical" href="https://wangf988.github.io/github-page-pwa/" />
-  <link rel="manifest" href="/github-page-pwa/manifest.webmanifest">
+  <link rel="canonical" href="https://wangf988.github.io/" />
+  <link rel="manifest" href="/manifest.webmanifest">
 </head>
 <body>
   <h1>GitHub page as PWA template</h1>
